--- a/notes/0070. CommonJS 规范/demos/1/entry-file-1/package.json
+++ b/notes/0070. CommonJS 规范/demos/1/entry-file-1/package.json
@@ -1,11 +1,12 @@
 {
   "name": "entry-file",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "type": "commonjs"
 }
